# InteractiveBrokersWrapperCpp

./: CMakeLists.txt  README.md
docs/: Untitled Diagram.drawio  blocks.xml  contract_details.drawio
docs/architecture/requests/options/: chain.drawio
docs/architecture/strategy/: strategy.drawio
docs/architecture/wrappers/: wrappers_workflow.drawio
include/: IBRequestIds.h  IBSecType.h
include/contracts/: LegContract.h  OptionContract.h  StockContracts.h
include/data_structures/: contracts.h  greeks_table.h  open_orders.h  options.h  positions.h  snapshots.h
include/helpers/: connection.h  logger.h  open_markets.h  perf_timer.h  tick_to_string.h
include/ibwrapper_test/: test.h
include/options/: chain.h
include/orders/: common_orders.h
include/orders/management/: open.h  pnl.h  position.h
include/orders/options/: condor_order.h  simple_order.h
include/request/: MarketDataRequests.h
include/request/contracts/: ContractDetails.h
include/request/market_data/: fair_price.h  get_prices.h  market_data.h
include/request/options/: OptionChain.h  chain.h  greeks.h
include/strategy/: engine.h  order_execution.h  position_manager.h  queue.h  strategy_base.h
include/wrappers/: EWrapperDefault.h  IBAccountWrapper.h  IBBaseWrapper.h  IBBaseWrapper_backup.h  IBMarketWrapper.h  IBOrdersWrapper.h  IBStrategyWrapper.h  IBWrapperBase.h  IBWrapperMonitor.h
source/: test.cpp
